# blogapi

./: pyproject.toml  requirements.txt  schema.yaml
accounts/: admin.py  forms.py
accounts/fixtures/: new_users.yaml  users.yaml
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: serializers.py
posts/fixtures/: new_posts.yaml  posts.yaml
posts/migrations/: 0001_initial.py
