[project]
name = "blogapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marco", email = "m_uno_p@hotmail.com"},
]
dependencies = ["django>=5.1.4", "pyyaml>=6.0.2", "djangorestframework>=3.15.2", "django-cors-headers>=4.6.0", "dj-rest-auth>=7.0.1", "django-allauth>=65.3.1", "requests>=2.32.3", "drf-spectacular>=0.28.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
